# Smart-Android-FFmpeg

./: README.md  build.gradle  config.gradle  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/include/libavutil/: error.h
app/src/androidTest/java/com/example/lammy/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_lib.cpp  audio_lib.h  common.cpp  common.h  ffmpeg_audio_handle.cpp  ffmpeg_handle.cpp  rtmp_handle.cpp  vedio_lib.cpp  vedio_lib.h  video_handle.cpp
app/src/main/java/com/example/lammy/ffmpegdemo/: AvideoApp.kt  myApp.kt
app/src/main/java/com/example/lammy/ffmpegdemo/audio/: FFmpegAudioHandle.kt
app/src/main/java/com/example/lammy/ffmpegdemo/ffmpeg/: FFmpegHandle.kt
app/src/main/java/com/example/lammy/ffmpegdemo/rtmp/: RtmpHandle.kt
app/src/main/java/com/example/lammy/ffmpegdemo/util/: FFmpegUtil.kt
app/src/main/java/com/example/lammy/ffmpegdemo/video/: VideoHandler.kt
app/src/main/java/com/example/lammy/ffmpegdemo/view/: AudioActivity.kt  AudioFormatChangeFFmpegActivity.kt  AudioFormatChangeMediaCodecActivity.kt  AudioRecordFFmpegActivity.kt  AudioRecordMediaCodecActivity.kt  CameraFFmpegPushRtmpActivity.kt  CameraMediaCodecFileActivity.kt  CameraMediaCodecRtmpActivity.kt  MainActivity.kt  MedioActivity.kt  SplashActivity.kt  VideoActivity.kt  VideoCompoundFileActivity.kt  VideoFileRtmpFFmpegActivity.kt  VideoFileRtmpRtmpDumpActivity.kt  VideoPlayActivity.kt
app/src/main/java/com/example/lammy/ffmpegdemo/view/audio/: AudioActivity.kt  AudioFormatChangeMediaCodecActivity.kt  AudioRecordFFmpegActivity.kt  AudioRecordMediaCodecActivity.kt
app/src/main/java/com/example/lammy/ffmpegdemo/view/video/: CameraFFmpegPushRtmpActivity.kt  CameraMediaCodecFileActivity.kt  CameraMediaCodecRtmpActivity.kt  VideoActivity.kt  VideoCompoundFileActivity.kt  VideoFileRtmpFFmpegActivity.kt  VideoFileRtmpRtmpDumpActivity.kt  VideoPlayActivity.kt
app/src/main/java/com/example/lammy/ffmpegdemo/widget/: AutoVideoView.kt  UiSurfaceView.kt
app/src/main/res/layout/: activity_audio.xml  activity_audio_codec.xml  activity_audio_record.xml  activity_audio_record_ffmpeg.xml  activity_medio.xml  activity_push_file_rtmp.xml  activity_rtmpdump_file.xml  activity_splash.xml  activity_video_compound_file.xml  activity_video_play.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/lammy/ffmpegdemo/: ExampleUnitTest.java
ffmpeg_lib/: build.gradle
ffmpeg_lib/src/androidTest/java/com/example/ffmpeg_lib/: ExampleInstrumentedTest.kt
ffmpeg_lib/src/main/: AndroidManifest.xml
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/audio/: AudioBuffer.java  AudioCodec.java
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/device/: AudioRecordController.java  CameraController.java
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/ffmpeg/: PushCallback.java
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/flv/: AnnexbHelper.java  FlvPacker.java  FlvPackerHelper.java  Packer.java
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/flv/amf/: AmfArray.java  AmfBoolean.java  AmfData.java  AmfDecoder.java  AmfMap.java  AmfNull.java  AmfNumber.java  AmfObject.java  AmfString.java  AmfType.java  AmfUndefined.java  Util.java
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/listener/: OnCompleteListener.java
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/utils/: ADTSUtils.java  BytesHexStrTranslate.java  FileUtil.java  IOUtils.java  ImageUtil.java  LogUtils.java  PermissionsChecker.java  PhoneUtils.java
ffmpeg_lib/src/main/java/com/example/ffmpeg_lib/video/: AudioComponent.java  AudioConfig.java  EncodedDataCallback.java  SourceDataCallback.java  VideoComponent.java  VideoConfig.java
ffmpeg_lib/src/test/java/com/example/ffmpeg_lib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mvvmlin/: build.gradle
mvvmlin/src/main/java/com/aleyn/mvvm/base/: BaseActivity.kt  ViewModelFactory.kt
